Home page changes

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -41,7 +41,7 @@
 <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-<div class="">
+<!-- <div class="">
 <div class="spinner"></div>
 </div>
 <header id="header" class="header-section">
@@ -77,15 +77,15 @@
 <div class="col-sm-8 text-right">
     <ul id="mainmenu" class="nav navbar-nav nav-menu">
     <li class="active"> <a routerLink="">Home</a>
-    <!-- <ul>   `
+    <ul>   `
     <li><a routerLink="">Home Default</a></li>
     <li><a href="index-2.html">Home Modern</a></li>
-    </ul> -->
+    </ul> 
     </li>
     <li><a routerLink="/about" style="color: #f8b864;">About Us</a></li>
     <li><a routerLink="/services">Services</a></li>
     <li><a routerLink="/activities">Activities</a></li>
-    <!-- <li><a href="#">Pages</a>
+     <li><a href="#">Pages</a>
     <ul>
     <li><a href="gallery.html">Gallery</a></li>
     <li><a href="team.html">Volunteers</a></li>
@@ -101,7 +101,7 @@
     <li><a href="blog-list-modern.html">Modern List</a></li>
     <li><a href="blog-single.html">Blog Single</a></li>
     </ul>
-    </li> -->
+    </li> 
     <li> <a routerLink="/contact">Contact Us</a></li>
     </ul>
     <a href="#" class="default-btn">Donate Now</a>
@@ -122,7 +122,7 @@
 </ol>
 </div>
 </div>
-</div>
+</div> -->
 <section class="about-section bg-grey bd-bottom padding">
 <div class="container">
 <div class="row about-wrap">
@@ -135,7 +135,7 @@
 <div class="about-content">
 <h2>You are definitely intrigued to <br> discover who we are.</h2>
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has survived not only centuries, but also the electronic more typesetting, remaining essentially unchanged.Nullam id dolor ultricies vehicula ut id elit.</p>
-<a href="#" class="default-btn">More About Us</a>
+
 </div>
 </div>
 </div>
@@ -168,6 +168,7 @@
 </div>
 </div>
 <div class="col-md-6">
+    
 <div class="team-details">
 <img src="../../assets/img/team-3.jpg" alt="team">
 <div class="hover">
@@ -203,7 +204,7 @@
 </div>
 </div>
 </div>
-</section>
+</section><!--
 <section id="counter" class="counter-section">
 <div class="container">
 <ul class="row counters">
@@ -324,7 +325,7 @@
 </div>
 </div>
 </div>
-</footer>
+</footer> -->
 <a data-scroll href="#header" id="scroll-to-top"><i class="arrow_up"></i></a>
 
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="../../assets/js/vendor/jquery-1.12.4.min.js"></script>
