--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -41,7 +41,7 @@
 <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-<div class="">
+<!--<div class="">
 <div class="spinner"></div>
 </div>
 <header id="header" class="header-section">
@@ -77,15 +77,15 @@
 <div class="col-sm-8 text-right">
     <ul id="mainmenu" class="nav navbar-nav nav-menu">
     <li class="active"> <a routerLink="">Home</a>
-    <!-- <ul>   `
+     <ul>   `
     <li><a routerLink="">Home Default</a></li>
     <li><a href="index-2.html">Home Modern</a></li>
-    </ul> -->
+    </ul> 
     </li>
     <li><a routerLink="/about">About Us</a></li>
     <li><a routerLink="/services">Services</a></li>
     <li><a routerLink="/activities" style="color: #f8b864;">Activities</a></li>
-    <!-- <li><a href="#">Pages</a>
+     <li><a href="#">Pages</a>
     <ul>
     <li><a href="gallery.html">Gallery</a></li>
     <li><a href="team.html">Volunteers</a></li>
@@ -93,15 +93,14 @@
     </ul>
     </li>
     <li><a href="blog-grid.html">Blog</a>
-    <ul> -->
-    <!-- <li><a href="blog-grid.html">Blog Grid</a></li>
+    <ul>  <li><a href="blog-grid.html">Blog Grid</a></li>
     <li><a href="blog-left-sidebar.html">Blog Left Sidebar</a></li>
     <li><a href="blog-right-sidebar.html">Blog Right Sidebar</a></li>
     <li><a href="blog-list-classic.html">Classic List</a></li>
     <li><a href="blog-list-modern.html">Modern List</a></li>
     <li><a href="blog-single.html">Blog Single</a></li>
     </ul>
-    </li> -->
+    </li> 
     <li> <a routerLink="/contact">Contact Us</a></li>
     </ul>
     <a href="#" class="default-btn">Donate Now</a>
@@ -122,7 +121,7 @@
 </ol>
 </div>
 </div>
-</div>
+</div>-->
 <section class="events-section bd-bottom padding">
 <div class="container">
 <div id="event-carousel" class="events-wrap owlCarousel">
@@ -234,7 +233,7 @@
 </div>
 </div>
 </section>
-<div class="sponsor-section bd-bottom">
+<!-- <div class="sponsor-section bd-bottom">
 <div class="container">
 <ul id="sponsor-carousel" class="sponsor-items owl-carousel">
 <li class="sponsor-item">
@@ -320,7 +319,7 @@
 </div>
 </div>
 </div>
-</footer>
+</footer> -->
 <a data-scroll href="#header" id="scroll-to-top"><i class="arrow_up"></i></a>
 
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="../../assets/js/vendor/jquery-1.12.4.min.js"></script>
