--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -41,7 +41,7 @@
 <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-<div class="">
+<!-- <div class="">
 <div class="spinner"></div>
 </div>
 <header id="header" class="header-section fadeIn animated cssanimation">
@@ -50,7 +50,7 @@
 <div class="top-content-wrap row">
 <div class="col-sm-8">
 <ul class="left-info">
-<!-- <li><a href="#"><i class="ti-email"></i><span class="__cf_email__" data-cfemail="337a5d555c736a5c4641775c5e525a5d1d505c5e">[email&#160;protected]</span></a></li> -->
+ <li><a href="#"><i class="ti-email"></i><span class="__cf_email__" data-cfemail="337a5d555c736a5c4641775c5e525a5d1d505c5e">[email&#160;protected]</span></a></li> 
 <li><a href="#"><i class="ti-email"></i>Info@YourDomain.com</a></li>
 <li><a href="#"><i class="ti-mobile"></i>+(333) 052 39876</a></li>
 </ul>
@@ -78,15 +78,15 @@
 <div class="col-sm-8 text-right">
 <ul id="mainmenu" class="nav navbar-nav nav-menu">
 <li class="active"> <a routerLink="" style="color: #f8b864;">Home</a>
-<!-- <ul>   `
+ <ul>   `
 <li><a routerLink="">Home Default</a></li>
 <li><a href="index-2.html">Home Modern</a></li>
-</ul> -->
+</ul> 
 </li>
 <li><a routerLink="/about">About Us</a></li>
-<li><a routerLink="/services">Services</a></li>
+<li><a href="#services">Services</a></li>
 <li><a routerLink="/activities">Activities</a></li>
-<!-- <li><a href="#">Pages</a>
+ <li><a href="#">Pages</a>
 <ul>
 <li><a href="gallery.html">Gallery</a></li>
 <li><a href="team.html">Volunteers</a></li>
@@ -102,8 +102,9 @@
 <li><a href="blog-list-modern.html">Modern List</a></li>
 <li><a href="blog-single.html">Blog Single</a></li>
 </ul>
-</li> -->
-<li> <a routerLink="/contact">Contact Us</a></li>
+</li> 
+<li> <a href="#contact">Contact Us</a></li>
+
 </ul>
 <a href="#" class="default-btn">Donate Now</a>
 </div>
@@ -111,7 +112,7 @@
 </div>
 </div>
 </header>
-<div class="header-height" style="height: 128px;"></div>
+<div class="header-height" style="height: 128px;"></div> -->
 <section class="slider-section">
 <div class="slider-wrapper">
 <div id="main-slider" class="nivoSlider">
@@ -198,33 +199,41 @@
 <div class="row">
 <div class="col-md-4 col-sm-6 xs-padding">
 <div class="promo-content">
-<img src="../../assets/img/icon-1.png" alt="prmo icon">
-<h3>Make Donetion</h3>
+<img src="../../assets/img/view.png" alt="prmo icon">
+<h3>Our Vision</h3>
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-<a href="#">Read More</a>
+<!-- <a href="#">Read More</a> -->
 </div>
 </div>
 <div class="col-md-4 col-sm-6 xs-padding">
 <div class="promo-content">
-<img src="../../assets/img/icon-2.png" alt="prmo icon">
-<h3>Fundrising</h3>
+<img src="../../assets/img/mission.png" alt="prmo icon">
+<h3>Our Mission</h3>
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-<a href="#">Read More</a>
+<!-- <a href="#">Read More</a> -->
 </div>
 </div>
 <div class="col-md-4 col-sm-6 xs-padding">
 <div class="promo-content">
-<img src="../../assets/img/icon-3.png" alt="prmo icon">
-<h3>Become A Volunteer</h3>
+<img src="../../assets/img/diamond.png" alt="prmo icon">
+<h3>Our Value</h3>
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-<a href="#">Read More</a>
+<!-- <a href="#">Read More</a> -->
 </div>
 </div>
 </div>
 </div>
 </div>
 </section>
-<section class="causes-section bg-grey bd-bottom padding">
+<section class="blog-section bg-grey bd-bottom padding">
+    <div class="container">
+        <div class="section-heading text-center mb-40">
+        <h2>WE HAVE A DREAM</h2>
+        <span class="heading-border"></span>
+        <p>You could help us realise it.</p>
+        </div>
+    </div></section>
+<!-- <section id="services"class="causes-section bg-grey bd-bottom padding">
 <div class="container">
 <div class="section-heading text-center mb-40">
 <h2>Recent Causes</h2>
@@ -325,7 +334,7 @@
 </div>
 </div>
 </section>
-<section class="campaigns-section bd-bottom">
+ <section id="campaign"class="campaigns-section bd-bottom">
 <div class="container">
 <div class="row">
 <div class="col-md-6 xs-padding">
@@ -353,7 +362,7 @@
 </div>
 </div>
 </div>
- </section>
+ </section> 
 <section class="team-section bg-grey bd-bottom circle shape padding">
 <div class="container">
 <div class="section-heading text-center mb-40">
@@ -504,7 +513,7 @@
 </div>
 </div>
 </section>
-<section class="testimonial-section bd-bottom padding">
+<!-- <section class="testimonial-section bd-bottom padding">
 <div class="container">
 <div class="section-heading text-center mb-40">
 <h2>What People Say</h2>
@@ -542,7 +551,7 @@
 </div>
 </div>
 </div>
-</section>
+</section> 
 <section class="blog-section bg-grey bd-bottom padding">
 <div class="container">
 <div class="section-heading text-center mb-40">
@@ -621,7 +630,7 @@
 </ul>
 </div>
 </div>
-<section class="widget-section padding">
+ <section class="widget-section padding">
 <div class="container">
 <div class="widget-wrap row">
 <div class="col-md-4 xs-padding">
@@ -661,23 +670,24 @@
 </div>
 </div>
 </div>
-</section>
+</section> -->
+<!-- <app-contact id="contact"></app-contact>
 <footer class="footer-section">
 <div class="container">
 <div class="row">
 <div class="col-md-6 sm-padding">
-<div class="copyright">&copy; 2018 Charitify Powered by DynamicLayers</div>
+
 </div>
 <div class="col-md-6 sm-padding">
 <ul class="footer-social">
-<li><a href="#">Orders</a></li>
+
 <li><a href="#">Terms</a></li>
-<li><a href="#">Report Problem</a></li>
+
 </ul>
 </div>
 </div>
 </div>
-</footer>
+</footer> -->
 <a data-scroll="" href="#header" id="scroll-to-top" style="display: block;"><i class="arrow_up"></i></a>
 
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="../../assets/js/vendor/jquery-1.12.4.min.js"></script>
