--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -41,7 +41,7 @@
 <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-<div class="">
+<!-- <div class="">
 <div class="spinner"></div>
 </div>
 <header id="header" class="header-section">
@@ -77,14 +77,14 @@
 <div class="col-sm-8 text-right">
     <ul id="mainmenu" class="nav navbar-nav nav-menu">
     <li class="active"> <a routerLink="">Home</a>
-    <!-- <ul>   `
+     <ul>   `
     <li><a routerLink="">Home Default</a></li>
     <li><a href="index-2.html">Home Modern</a></li>
-    </ul> -->
+    </ul> 
     </li>
     <li><a routerLink="/about">About Us</a></li>
     <li><a routerLink="/services">Services</a></li>
-    <li><a routerLink="/activities">Activities</a></li>
+    <li><a routerLink="/activities">Activities</a></li> -->
     <!-- <li><a href="#">Pages</a>
     <ul>
     <li><a href="gallery.html">Gallery</a></li>
@@ -102,7 +102,7 @@
     <li><a href="blog-single.html">Blog Single</a></li>
     </ul>
     </li> -->
-    <li> <a routerLink="/contact" style="color: #f8b864;">Contact Us</a></li>
+    <!-- <li> <a routerLink="/contact" style="color: #f8b864;">Contact Us</a></li>
     </ul>
     <a href="#" class="default-btn">Donate Now</a>
     </div>
@@ -110,7 +110,7 @@
 </div>
 </div>
 </header>
-<div class="header-height"></div>
+<div class="header-height"></div> -->
 <!-- <div class="pager-header">
 <div class="container">
 <div class="page-content">
@@ -124,7 +124,6 @@
 </div>
 </div> -->
 <section class="contact-section padding">
-<div id="google_map"></div>
 <div class="container">
 <div class="row contact-wrap">
 <div class="col-md-7 xs-padding">
@@ -169,6 +168,7 @@
 </div>
 </div>
 </section>
+<!-- 
 <section class="widget-section padding">
 <div class="container">
 <div class="widget-wrap row">
@@ -226,7 +226,7 @@
 </div>
 </div>
 </footer>
-<a data-scroll href="#header" id="scroll-to-top"><i class="arrow_up"></i></a>
+<a data-scroll href="#header" id="scroll-to-top"><i class="arrow_up"></i></a> -->
 
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="../../assets/js/vendor/jquery-1.12.4.min.js"></script>
 
