Home page and Header Changes - V0.1

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <meta name="author" content="DynamicLayers">
-<title>Charitify || NGO/Charity/Fundraising Template</title>
+<title>Real Dream, A public Charitable Trust</title>
 <link rel="shortcut icon" type="image/x-icon" href="../../assets/img/favicon.png">
 
 <link rel="stylesheet" href="../../assets/css/font-awesome.min.css">
@@ -51,8 +51,8 @@
 <div class="col-sm-8">
 <ul class="left-info">
 <!-- <li><a href="#"><i class="ti-email"></i><span class="__cf_email__" data-cfemail="337a5d555c736a5c4641775c5e525a5d1d505c5e">[email&#160;protected]</span></a></li> -->
-<li><a href="#"><i class="ti-email"></i>Info@YourDomain.com</a></li>
-<li><a href="#"><i class="ti-mobile"></i>+(333) 052 39876</a></li>
+<li><a href="#"><i class="ti-email"></i>realdreamtrust@gmail.com</a></li>
+<li><a href="#"><i class="ti-mobile"></i>+(91)8754748250</a></li>
 </ul>
 </div>
 <div class="col-sm-4 d-none d-md-block">
@@ -71,8 +71,9 @@
 <div class="container">
 <div class="bottom-content-wrap row">
 <div class="col-sm-4">
-<div class="site-branding">
-    <a href="#"><img src="../../assets/img/logo.png" alt="Brand"></a>
+<div class="site-branding dot">
+    <a href="#"><img src="../../assets/img/logo.jpg" alt="Brand"></a>
+    <!-- <h2>Real Dream Trust</h2> -->
 </div>
 </div> 
 <div class="col-sm-8 text-right">
@@ -82,8 +83,8 @@
 <li> <a id="id_home"(click)="Navigate($event)" class="active">Home</a>
 </li>
 <li><a id="id_about" (click)="Navigate($event)">About Us</a></li>
-<li><a id="id_service" (click)="Navigate($event)">Services</a></li>
-<li><a  id="id_activity" (click)="Navigate($event)">Activities</a></li>
+<li><a id="id_service" (click)="Navigate($event)">Gallery</a></li>
+<li><a  id="id_activity" (click)="Navigate($event)">Services</a></li>
 <li> <a  id="id_contact" (click)="Navigate($event)">Contact Us</a></li>
 
 </ul>
@@ -94,7 +95,7 @@
 </div>
 </div>
 </header>
-<div class="header-height" style="height: 128px;"></div>
+<div class="header-height" ></div>
 
 <router-outlet></router-outlet>
 <footer class="footer-section">
