Fixed css issues

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -2,3 +2,4 @@
 .container,.header-height{height:6em !important;}
 .bottom-content-wrap{align-items: flex-start !important;}
 .top-header{height:3em;}
+.top-content-wrap i{color:#f8b864 !important;}
