--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,30 @@
 <link rel="shortcut icon" type="image/x-icon" href="../../assets/img/favicon.png">
 
 
+<link rel="stylesheet" href="../../assets/css/themify-icons.css">
 
+<link rel="stylesheet" href="../../assets/css/elegant-font-icons.css">
+
+<link rel="stylesheet" href="../../assets/css/elegant-line-icons.css">
+
+<link rel="stylesheet" href="../../assets/css/bootstrap.min.css">
+
+<link rel="stylesheet" href="../../assets/css/venobox/venobox.css">
+
+<link rel="stylesheet" href="../../assets/css/owl.carousel.css">
+
+<link rel="stylesheet" href="../../assets/css/slicknav.min.css">
+
+<link rel="stylesheet" href="../../assets/css/css-animation.min.css">
+
+<link rel="stylesheet" href="../../assets/css/nivo-slider.css">
+
+<link rel="stylesheet" href="../../assets/css/main.css">
+
+<link rel="stylesheet" href="../../assets/css/responsive.css">
+<script src="../../assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+
+<script src="../../assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
 <body class="loaded">
 <!--[if lt IE 8]>
