Minor design changes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -197,30 +197,23 @@
 <div class="promo-wrap">
 <div class="container">
 <div class="row">
-<div class="col-md-4 col-sm-6 xs-padding">
+<div class="col-md-6 col-sm-6 xs-padding">
 <div class="promo-content">
 <img src="../../assets/img/view.png" alt="prmo icon">
 <h3>Our Vision</h3>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+<p>Education for everyone</p>
 <!-- <a href="#">Read More</a> -->
 </div>
 </div>
-<div class="col-md-4 col-sm-6 xs-padding">
+<div class="col-md-6 col-sm-6 xs-padding">
 <div class="promo-content">
 <img src="../../assets/img/mission.png" alt="prmo icon">
 <h3>Our Mission</h3>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+<p>To Provide education related assistance to the needy students.</p>
 <!-- <a href="#">Read More</a> -->
 </div>
 </div>
-<div class="col-md-4 col-sm-6 xs-padding">
-<div class="promo-content">
-<img src="../../assets/img/diamond.png" alt="prmo icon">
-<h3>Our Value</h3>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-<!-- <a href="#">Read More</a> -->
-</div>
-</div>
+
 </div>
 </div>
 </div>
