--- a/src/app/blog/blog-attributes/blog-left-sidebar.html
+++ b/src/app/blog/blog-attributes/blog-left-sidebar.html
@@ -40,7 +40,7 @@
 <body>
 <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+        <![endif]
 <div class="site-preloader-wrap">
 <div class="spinner"></div>
 </div>
@@ -122,20 +122,21 @@
 </ol>
 </div>
 </div>
-</div>
+</div>-->
 <section class="blog-section bg-grey padding">
 <div class="container">
 <div class="row left-sidebar">
 <div class="col-lg-3 xs-padding">
 <div class="sidebar-wrap">
 <div class="sidebar-widget mb-50">
-<h4>Search Posts</h4>
+<!-- <h4>Search Posts</h4>
 <form action="" class="search-form">
 <input type="text" class="form-control" placeholder="Type here">
 <button class="search-btn" type="button"><i class="fa fa-search"></i></button>
-</form>
+</form> -->
+
 </div>
-<div class="sidebar-widget mb-50">
+<!-- <div class="sidebar-widget mb-50">
 <h4>Categories</h4>
 <ul class="cat-list">
 <li><a href="#">Wed design</a><span>(2)</span></li>
@@ -145,7 +146,9 @@
 <li><a href="#">Marketing</a><span>(3)</span></li>
  <li><a href="#">Music</a><span>(2)</span></li>
 </ul>
-</div>
+
+
+</div> -->
 <div class="sidebar-widget mb-50">
 <h4>Recent Posts</h4>
 <ul class="recent-posts">
@@ -322,7 +325,7 @@
 </div>
 </div>
 </section>
-<footer class="footer-section">
+<!-- <footer class="footer-section">
 <div class="container">
 <div class="row">
 <div class="col-md-6 sm-padding">
@@ -337,7 +340,7 @@
 </div>
 </div>
 </div>
-</footer>
+</footer> -->
 <a data-scroll href="#header" id="scroll-to-top"><i class="arrow_up"></i></a>
 
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="../../assets/js/vendor/jquery-1.12.4.min.js"></script>
