--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -84,8 +84,8 @@
 <li> <a id="id_home"(click)="Navigate($event)" class="active">Home</a>
 </li>
 <li><a id="id_about" (click)="Navigate($event)">About Us</a></li>
-<li><a id="id_service" (click)="Navigate($event)">Gallery</a></li>
-<li><a  id="id_activity" (click)="Navigate($event)">Services</a></li>
+<li><a id="id_gallery" (click)="Navigate($event)">Gallery</a></li>
+<li><a  id="id_service" (click)="Navigate($event)">Services</a></li>
 <li> <a  id="id_contact" (click)="Navigate($event)">Contact Us</a></li>
 
 </ul>
