--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -40,7 +40,7 @@
 <body>
 <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+        <![endif]
 <div class="site-preloader-wrap">
 <div class="spinner"></div>
 </div>
@@ -50,7 +50,7 @@
 <div class="top-content-wrap row">
 <div class="col-sm-8">
 <ul class="left-info">
-<li><a href="#"><i class="ti-email"></i><span class="__cf_email__" data-cfemail="541d3a323b140d3b2126103b39353d3a7a373b39">[email&#160;protected]</span></a></li>
+<li><a href="#"><i class="ti-email"></i><span class="__cf_email__" data-cfemail="99d0f7fff6d9c0f6ecebddf6f4f8f0f7b7faf6f4">[email&#160;protected]</span></a></li>
 <li><a href="#"><i class="ti-mobile"></i>+(333) 052 39876</a></li>
 </ul>
 </div>
@@ -114,7 +114,7 @@
 <div class="pager-header">
 <div class="container">
 <div class="page-content">
-<h2>Blog Grid</h2>
+<h2>Blog Left Sidebar</h2>
 <p>Lorem Ipsum is simply text of the industry. </p>
 <ol class="breadcrumb">
 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
@@ -122,35 +122,82 @@
 </ol>
 </div>
 </div>
-</div>
+</div>-->
 <section class="blog-section bg-grey padding">
 <div class="container">
-<div class="row">
-<div class="col-lg-12 xs-padding">
-<div class="blog-items grid-list row">
-<div class="col-md-4 padding-15">
+<div class="row left-sidebar">
+<div class="col-lg-3 xs-padding">
+<div class="sidebar-wrap">
+<div class="sidebar-widget mb-50">
+<!-- <h4>Search Posts</h4>
+<form action="" class="search-form">
+<input type="text" class="form-control" placeholder="Type here">
+<button class="search-btn" type="button"><i class="fa fa-search"></i></button>
+</form> -->
+</div>
+<div class="sidebar-widget mb-50">
+<!-- <h4>Categories</h4>
+<ul class="cat-list">
+<li><a href="#">Wed design</a><span>(2)</span></li>
+<li><a href="#">Graphics design</a><span>(4)</span></li>
+<li><a href="#">Wordpress</a><span>(7)</span></li>
+<li><a href="#">Joomla</a><span>(5)</span></li>
+<li><a href="#">Marketing</a><span>(3)</span></li>
+ <li><a href="#">Music</a><span>(2)</span></li>
+</ul> -->
+</div>
+<div class="sidebar-widget mb-50">
+<h4>Recent Posts</h4>
+<ul class="recent-posts">
+<li *ngFor="let sidebar of sidebarDetails"  (click)="LoadPage(sidebar.mainpage,$event)">
+<img [src]="sidebar.img" alt="sidebar.alt">
+<div>
+<h4> {{sidebar.name}} </h4>
+<span class="date"><i class="fa fa-clock-o"></i> {{sidebar.date}}</span>
+</div>
+</li>
+
+</ul>
+</div>
+<div class="sidebar-widget mb-50">
+<!-- <h4>Tags</h4>
+<ul class="tags">
+<li><a href="#">Audio</a></li>
+<li><a href="#">Blog</a></li>
+<li><a href="#">Design</a></li>
+<li><a href="#">Magazine</a></li>
+<li><a href="#">Gallery</a></li>
+<li><a href="#">Creative</a></li>
+<li><a href="#">Post</a></li>
+<li><a href="#">Quotes</a></li>
+</ul> -->
+</div>
+</div>
+</div>
+<div class="col-md-9 xs-padding">
+<div class="blog-items row">
+<div class="col-md-6 padding-15" *ngFor="let post of mainPageDetails">
 <div class="blog-post">
-<img src="../../assets/img/post-1.jpg" alt="blog post">
+<img [src]="post.img" alt="post.alt">
 <div class="blog-content">
-<span class="date"><i class="fa fa-clock-o"></i> January 01.2018</span>
-<h3><a href="#">Standard gallery post</a></h3>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-<a href="#" class="post-meta">Read More</a>
+ <span class="date"><i class="fa fa-clock-o"></i>{{post.date}}</span>
+<h3>{{post.headers}}</h3>
+<p>{{post.details}}</p>
 </div>
 </div>
 </div>
-<div class="col-md-4 padding-15">
+<!-- <div class="col-md-6 padding-15">
 <div class="blog-post">
 <img src="../../assets/img/post-2.jpg" alt="blog post">
 <div class="blog-content">
 <span class="date"><i class="fa fa-clock-o"></i> January 01.2018</span>
- <h3><a href="#">Blog post with couple photos</a></h3>
+<h3><a href="#">Blog post with couple photos</a></h3>
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 <a href="#" class="post-meta">Read More</a>
 </div>
 </div>
 </div>
-<div class="col-md-4 padding-15">
+<div class="col-md-6 padding-15">
 <div class="blog-post">
 <img src="../../assets/img/post-3.jpg" alt="blog post">
 <div class="blog-content">
@@ -161,7 +208,7 @@
 </div>
 </div>
 </div>
-<div class="col-md-4 padding-15">
+<div class="col-md-6 padding-15">
 <div class="blog-post">
 <img src="../../assets/img/post-4.jpg" alt="blog post">
 <div class="blog-content">
@@ -172,7 +219,7 @@
 </div>
 </div>
 </div>
-<div class="col-md-4 padding-15">
+<div class="col-md-6 padding-15">
 <div class="blog-post">
 <img src="../../assets/img/post-5.jpg" alt="blog post">
 <div class="blog-content">
@@ -183,7 +230,7 @@
 </div>
 </div>
 </div>
-<div class="col-md-4 padding-15">
+<div class="col-md-6 padding-15">
 <div class="blog-post">
 <img src="../../assets/img/post-6.jpg" alt="blog post">
 <div class="blog-content">
@@ -193,15 +240,15 @@
 <a href="#" class="post-meta">Read More</a>
 </div>
 </div>
+</div> -->
 </div>
-</div>
-<ul class="pagination_wrap align-center mt-30">
+<!-- <ul class="pagination_wrap mt-30">
 <li><a href="#"><i class="ti-arrow-left"></i></a></li>
 <li><a href="#">1</a></li>
 <li><a href="#" class="active">2</a></li>
 <li><a href="#">3</a></li>
 <li><a href="#"><i class="ti-arrow-right"></i></a></li>
-</ul>
+</ul> -->
 </div>
 </div>
 </div>
@@ -237,7 +284,7 @@
 <div class="widget-content">
 <h3>Charitify Location</h3>
 <ul class="address">
-<li><i class="ti-email"></i> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="2e674048416e77415b5c6a41434f4740004d4143">[email&#160;protected]</a></li>
+<li><i class="ti-email"></i> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="89c0e7efe6c9d0e6fcfbcde6e4e8e0e7a7eae6e4">[email&#160;protected]</a></li>
 <li><i class="ti-mobile"></i> +(333) 052 39876</li>
 <li><i class="ti-world"></i> Www.YourWebsite.com</li>
 <li><i class="ti-location-pin"></i> 60 Grand Avenue. Central New Road 0708, USA</li>
@@ -247,7 +294,7 @@
 </div>
 </div>
 </section>
-<footer class="footer-section">
+<!-- <footer class="footer-section">
 <div class="container">
 <div class="row">
 <div class="col-md-6 sm-padding">
@@ -255,14 +302,14 @@
 </div>
 <div class="col-md-6 sm-padding">
 <ul class="footer-social">
-<li><a href="#">Orders</a></li>
+ <li><a href="#">Orders</a></li>
 <li><a href="#">Terms</a></li>
 <li><a href="#">Report Problem</a></li>
 </ul>
 </div>
 </div>
 </div>
-</footer>
+</footer> -->
 <a data-scroll href="#header" id="scroll-to-top"><i class="arrow_up"></i></a>
 
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="../../assets/js/vendor/jquery-1.12.4.min.js"></script>
