--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -132,13 +132,13 @@
 <p>We are happy to be in touch with you. You can reach us with any one of the following options.</p>
 <!-- <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Main has survived not only five centuries.</p> -->
 <ul>
-<li><i class="ti-location-pin"></i>Real Dream Trust, No 24, Vadivel Nagar, Behind COllectorate, Kancheepuram 631501.</li>
+<li><i class="ti-location-pin"></i>Real Dream Trust, No 24, Vadivel Nagar, Behind Collectorate, Kancheepuram 631501.</li>
 <li><i class="ti-mobile"></i> +91 8754748250 +91 9629642789</li>
 <li><i class="ti-email"></i> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="6930061c1b0c04080005290a0604190807100708040c470a0604">realdreamtrust@gmail.com</a></li>
 </ul>
 </div>
 </div>
-<div class="col-md-5 xs-padding">
+<!-- <div class="col-md-5 xs-padding">
 <div class="contact-form">
 <h3>Drop us a line</h3>
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -164,7 +164,7 @@
 <div id="form-messages" class="alert" role="alert"></div>
 </form>
 </div>
-</div>
+</div> -->
 </div>
 </div>
 </section>
