--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -199,17 +199,20 @@
 <div class="row">
 <div class="col-md-6 col-sm-6 xs-padding">
 <div class="promo-content">
-<img src="../../assets/img/view.png" alt="prmo icon">
-<h3>Our Vision</h3>
-<p>Education for everyone</p>
+<!-- <img src="../../assets/img/view.png" alt="prmo icon"> -->
+<h3  style="padding: 10px;">Recent Activity</h3>
+<div>
+    <p *ngFor="let activity of recentActivity">* {{activity.details}}</p>
+</div>
+
 <!-- <a href="#">Read More</a> -->
 </div>
 </div>
 <div class="col-md-6 col-sm-6 xs-padding">
 <div class="promo-content">
-<img src="../../assets/img/mission.png" alt="prmo icon">
-<h3>Our Mission</h3>
-<p>To Provide education related assistance to the needy students.</p>
+<!-- <img src="../../assets/img/mission.png" alt="prmo icon"> -->
+<h3 style="padding: 10px;">Upcoming Activity</h3>
+<p *ngFor="let activity of upcomingActivity">* {{activity.details}}</p>
 <!-- <a href="#">Read More</a> -->
 </div>
 </div>
@@ -218,14 +221,137 @@
 </div>
 </div>
 </section>
-<section class="blog-section bg-grey bd-bottom padding">
+<section class="about-section bg-grey bd-bottom padding">
+    <div class="container">
+    <div class="row about-wrap">
+    <div class="col-md-6 xs-padding">
+    <div class="about-image">
+    <img src="../../assets/img/about.jpg" alt="about image">
+    </div>
+    </div>
+    <div class="col-md-6 xs-padding">
+    <div class="about-content">
+    <h2>WHO WE ARE</h2>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has survived not only centuries, but also the electronic more typesetting, remaining essentially unchanged.Nullam id dolor ultricies vehicula ut id elit.</p>
+    
+    </div>
+    </div>
+    </div>
+    </div>
+    </section>
+    <section class="about-section bg-grey bd-bottom padding">
+        <div class="container">
+        <div class="row about-wrap">
+            <div class="col-md-6 xs-padding">
+                <div class="about-content">
+                <h2>WHAT WE DO </h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has survived not only centuries, but also the electronic more typesetting, remaining essentially unchanged.Nullam id dolor ultricies vehicula ut id elit.</p>
+                
+                </div>
+                </div>
+        <div class="col-md-6 xs-padding">
+        <div class="about-image">
+        <img src="../../assets/img/about.jpg" alt="about image">
+        </div>
+        </div>
+    
+        </div>
+        </div>
+        </section>
+        <section class="team-section bd-bottom padding">
+            <div class="container">
+            <div class="section-heading text-center mb-40">
+            <h2>OUR HISTORY</h2>
+     </div>
+            </div>
+            </section>
+    <section class="team-section bd-bottom padding">
+    <div class="container">
+        <div class="section-heading text-center mb-40">
+            <h2>OUR HISTORY</h2>
+            <span class="heading-border"></span>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br> It has survived not only five centuries.</p>
+            </div>
+     <div class="team-wrapper row">
+        <div>Some tags before</div>
+        <owl-carousel-o [options]="customOptions">
+     
+        <ng-container *ngFor="let slide of apiData">
+          <ng-template carouselSlide [dotContent]="slide.content" [id]="slide.id">
+              <div>
+                <img [src]="slide.url" [alt]="slide.alt" [title]="slide.title">
+                <span>{{slide.content}}</span>
+              </div>
+            
+          </ng-template>
+        </ng-container>
+     
+      </owl-carousel-o>
+      <div>Some tags after</div>
+    <!--<div class="col-lg-6 sm-padding">
+    <div class="team-wrap row">
+    <div class="col-md-6">
+    <div class="team-details">
+    <img src="../../assets/img/team-1.jpg" alt="team">
+    <div class="hover">
+    <h3>Jonathan Smith <span>Communicator</span></h3>
+    </div>
+    </div>
+    </div>
+    <div class="col-md-6">
+    <div class="team-details">
+    <img src="../../assets/img/team-2.jpg" alt="team">
+    <div class="hover">
+    <h3>Angelina Rose <span>Certified Reader</span></h3>
+    </div>
+    </div>
+    </div>
+    <div class="col-md-6">
+        
+    <div class="team-details">
+    <img src="../../assets/img/team-3.jpg" alt="team">
+    <div class="hover">
+    <h3>Taylor Swift <span>Event Creator</span></h3>
+    </div>
+    </div>
+    </div>
+    <div class="col-md-6">
+    <div class="team-details">
+    <img src="../../assets/img/team-4.jpg" alt="team">
+    <div class="hover">
+    <h3>Michel Brown <span>Internet Specialist</span></h3>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    <div class="col-lg-6 sm-padding">
+    <div class="team-content">
+    <h2>Become a Volunteer?</h2>
+    <h3>Join your hand with us for a better life and beautiful future.</h3>
+    <p>Lorem Ipsum is simply dummy printing and industry. It has survived not only five centuries, but also the leap electronic type essentially unchanged.</p>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+    <ul class="check-list">
+    <li><i class="fa fa-check"></i>We are friendly to each other.</li>
+    <li><i class="fa fa-check"></i>If you join with us,We will give you free training.</li>
+    <li><i class="fa fa-check"></i>Its an opportunity to help poor children.</li>
+    <li><i class="fa fa-check"></i>No goal requirements.</li>
+    <li><i class="fa fa-check"></i>Joining is tottaly free. We dont need any money from you.</li>
+    </ul>
+    <a href="#" class="default-btn">Join With Us</a>
+    </div>
+    </div>-->
+    </div> 
+    </div>
+    </section>
+<!-- <section class="blog-section bg-grey bd-bottom padding">
     <div class="container">
         <div class="section-heading text-center mb-40">
         <h2>WE HAVE A DREAM</h2>
         <span class="heading-border"></span>
         <p>You could help us realise it.</p>
         </div>
-    </div></section>
+    </div></section> -->
 <!-- <section id="services"class="causes-section bg-grey bd-bottom padding">
 <div class="container">
 <div class="section-heading text-center mb-40">
