--- a/src/app/blog/blog-attributes/blog-left-sidebar.html
+++ b/src/app/blog/blog-attributes/blog-left-sidebar.html
@@ -150,7 +150,7 @@
 
 </div> -->
 <div class="sidebar-widget mb-50">
-<h4>Recent Posts</h4>
+<h4>Our Services</h4>
 <ul class="recent-posts">
 <li>
 <img src="../../assets/img/rel-post-1.jpg" alt="blog post">
