Target Blank given for Header social links

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -58,10 +58,10 @@
 </div>
 <div class="col-sm-4 d-none d-md-block">
 <ul class="right-info">
-<li><a href="https://facebook.com/RealDreamTrust"><i class="fa fa-facebook"></i></a></li>
-<li><a href="https://twitter.com/RealDreamTrust"><i class="fa fa-twitter"></i></a></li>
-<li><a href="https://instagram.com/RealDreamTrust"><i class="fa fa-instagram"></i></a></li>
-<li><a href="https://in.pinterest.com/realdreamtrust"><i class="fa fa-pinterest"></i></a></li>
+<li><a target="_blank" href="https://facebook.com/RealDreamTrust"><i class="fa fa-facebook"></i></a></li>
+<li><a target="_blank" href="https://twitter.com/RealDreamTrust"><i class="fa fa-twitter"></i></a></li>
+<li><a target="_blank" href="https://instagram.com/RealDreamTrust"><i class="fa fa-instagram"></i></a></li>
+<li><a target="_blank" href="https://in.pinterest.com/realdreamtrust/"><i class="fa fa-pinterest"></i></a></li>
 </ul>
 </div>
 </div>
